--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,24 @@ label{
     display: block;
     margin-bottom: 30px;
 }
+
+* {
+    box-sizing: border-box;
+}
+.wrapper {
+    width: 400px;
+    margin: 40px auto 0 auto;
+    border: 1px solid rgba(0,0,0, .2);
+    padding: 20px;
+}
+.form-signin{
+    background-color: beige;
+}
+
+button {
+    margin-top: 20px;
+}
+
+[type=checkbox] {
+    margin-top: 20px;
+}
